--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,6 +21,13 @@ jobs:
         uses: actions/setup-node@v1  # This is the action for setting up Node.js
         with:
           node-version: ${{ matrix.node-version }}  # This specifies the Node.js version to use
+        
+      - name: Clear npm cache
+        run: npm cache clean --force
+
+      - name: Upgrade npm
+        run: npm install -g npm@latest
+
 
       - name: Install dependencies
         run: npm ci
