--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Clear npm cache
         run: npm cache clean --force
 
-      - name: Upgrade npm
-        run: npm install -g npm@latest
+      - name: Install npm
+        run: npm install
 
 
       - name: Install dependencies
