--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -42,9 +42,23 @@ jobs:
           name: npm-debug-log
           path: /home/runner/.npm/_logs/*.log
 
-          
-
-
       - name: Run tests
         run: npm test
 
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to AWS EC2
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+        run: |
+          ssh -o StrictHostKeyChecking=no -i "${{ secrets.EC2_KEY }}" ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
+            cd /path/to/your/project
+            git pull origin main
+            npm install
+            npm run build --if-present
+            pm2 restart app.js # assuming you are using pm2 to manage the Node app
+          EOF
