--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -49,16 +49,21 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - name: Add SSH key
+        run: echo "${{ secrets.EC2_KEY }}" > ~/.ssh/id_rsa
+      - name: Set permissions for the SSH key
+        run: chmod 600 ~/.ssh/id_rsa
       - name: Deploy to AWS EC2
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
         run: |
-          ssh -o StrictHostKeyChecking=no -i "${{ secrets.EC2_KEY }}" ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
+          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
             cd /path/to/your/project
             git pull origin main
             npm install
             npm run build --if-present
             pm2 restart app.js # assuming you are using pm2 to manage the Node app
           EOF
+
