--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -49,6 +49,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - name: Create SSH directory
+        run: mkdir -p ~/.ssh
+        
       - name: Add SSH key
         run: echo "${{ secrets.EC2_KEY }}" > ~/.ssh/id_rsa
       - name: Set permissions for the SSH key
