--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -70,7 +70,7 @@ jobs:
           AWS_REGION: ${{ secrets.AWS_REGION }}
         run: |
           ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
-            cd /path/to/your/project
+            cd /home/ubuntu/GitAction
             git pull origin main
             npm install
             npm run build --if-present
