--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -74,6 +74,6 @@ jobs:
             git pull origin main
             npm install
             npm run build --if-present
-            pm2 restart app.js # assuming you are using pm2 to manage the Node app
+            pm2 restart index.js --update-env || pm2 start index.js --name "my-app" # assuming you are using pm2 to manage the Node app
           EOF
 
