--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,9 @@ jobs:
     - name: Install dependencies
       run: npm install
       # 'npm install' installs the dependencies defined in your project's 'package.json' file
+    - name: Fix permissions on node_modules/.bin
+      run: sudo chmod -R 777 node_modules/.bin
+
 
     - name: Build
       run: npm run build --if-present
