adjusting ESLint test

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "gitaction",
   "version": "1.0.0",
+  "type": "module",
   "description": "Practice on gitaction",
   "main": "index.js",
   "scripts": {
